Implement Smart Seating Planner with NLP parsing, visualization, and export

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/smart-board.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tools.css">
+    <link rel="stylesheet" href="css/seating-planner.css">
 
     <!-- Google Fonts -->
     <!-- Google Fonts (Pro Max Design System) -->
